# xiaoai-agent

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  skills-lock.json
voice-gateway/: README.md  pyproject.toml
voice-gateway/client/: README.md
voice-gateway/client/client-rust/: Cargo.toml  README.md  init.sh
voice-gateway/client/kws/: boot.sh
voice-gateway/device/client-rust/: README.md  boot.sh
voice-gateway/device/kws/: README.md  debug.sh  init.sh
voice-gateway/docs/: README.md  roadmap.md
voice-gateway/docs/1-idea/: README.md
voice-gateway/docs/2-poc/: 1-intent.md  2-open-xiaoai-path.md  2.1-lx06-firmware-ssh.md  2.2-speaker-client.md  2.3-mac-mini-server.md  2.4-end-to-end-validation.md  3-server-hermes-path.md  (+17 more)
voice-gateway/ops/: .env.example  README.md  docker-compose.yml
voice-gateway/scripts/: build-speaker-client.sh  configure-speaker-client.sh  cut-vad-sherpa-onnx.py  import-grafana-dashboard-json.sh  install-speaker-client.sh  install-speaker-kws.sh  run-ops-stack.sh  run-tts-http-server.sh  run-voice-gateway-minimal.sh  sync-speaker-network.sh  transcribe-sherpa-onnx-offline.py  validate-speaker-e2e.sh
voice-gateway/server/: __init__.py  app.py  xiaoai_runtime.py
voice-gateway/tests/: test_endpointing.py  test_minimal_loop.py  test_observability_events.py  test_open_xiaoai_adapter.py  test_playback.py  test_triggers.py  test_xiaoai_protocol.py  test_xiaoai_runtime.py  test_xiaoai_ws_server.py
voice-gateway/voice_gateway/: __init__.py  app.py  config.py  models.py  xiaoai_runtime.py
(+94 files in other folders)
