[project]
name = "voice-gateway"
version = "0.1.0"
description = "Mac Mini side voice gateway for XiaoAI speaker experiments."
requires-python = ">=3.9"
dependencies = [
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp-proto-http>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
