[project]
name = "voice-gateway"
version = "0.1.0"
description = "Mac Mini side voice gateway for XiaoAI speaker experiments."
requires-python = ">=3.10"
dependencies = [
    "edge-tts>=7.2.3",
    "numpy>=2.2.3",
    "onnxruntime==1.23.2",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp-proto-http>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "sherpa-onnx==1.12.32",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
